vcs/specs/parser/fail/types/rank2_empty_generics.vr
// @test: parse-fail
// @level: L0
// @tags: parser, types, rank2, generics, error
// @description: Test detection of rank-2 function type with empty generic list
// @expected-error: E018

// Rank-2 function type must have at least one type parameter
type Transform is fn<>(Int) -> Int;
